# AI_DS_Saylani_Hackathon_2025

./: .gitignore  AUTH_README.md  README.md  db.py  pyproject.toml  readme.md  setup_env.py
backend/: add_sample_students.py  env.example  main.py  schemas.py  settings.py
backend/agent/: graph.py  ragagent.py  tools.py
backend/models/: user.py
backend/routers/: students.py
backend/services/: auth.py  chat_history.py  users.py  voice.py
backend/uaf_data/: uaf_scraped_data.json
models/: student.py
routers/: analytics.py  auth.py  chat.py  students.py
scripts/: create_admin.py  seed_mongo.py
services/: students.py
uaf_data/: ragagent.py
